[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/objects/portal.png" type="Texture" id=1]
[ext_resource path="res://scripts/Portal.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.50541, 7.99915 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 5
emission_ring_radius = 9.0
emission_ring_inner_radius = 9.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -4.18
tangential_accel = -1.09

[node name="Portal" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="RightPosition" type="Node2D" parent="."]
position = Vector2( 16, 0 )

[node name="LeftPosition" type="Node2D" parent="."]
position = Vector2( -16, 0 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.433072, 0.0376043 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0.433072, 0 )
amount = 12
lifetime = 1.8
randomness = 1.0
process_material = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
